Updating few dependencies - doing some code cleanup